scripts/nullaway/annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8.txt
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/GenericLittleMan.java:256: error: [NullAway] dereferenced expression instruction is @Nullable
        return instruction.getAction().doAction(this);
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/PositionGetterAdapter.java:71: error: [NullAway] initializer method does not guarantee @NonNull field positionGetter (line 64) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PositionGetterAdapter() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/littlemanutilities/littlemandata/LittleManMemory.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields rememberedPage (line 28), rememberedData (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LittleManMemory() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littleman/littlemanutilities/littlemandata/LittleManMemory.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.rememberedData = data;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/littlemancommands/LittleManCommands/LittleManConditionalAction.java:120: error: [NullAway] assigning @Nullable expression to @NonNull field
        conditionalActionStep = conditionalActionStep.getNextStep();
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/NotebookProblemSet.java:56: error: [NullAway] initializer method does not guarantee @NonNull field notebookDevelopmentProblem (line 45) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NotebookProblemSet(Collection<? extends NotebookDevelopmentProblem> notebookDevelopmentProblems) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/submissioncontrols/SubmissionControlGui.java:31: error: [NullAway] initializer method does not guarantee @NonNull field notebookDeveloper (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SubmissionControlGui() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/notebookdeveloper/speedcontroller/SpeedControllerGui.java:23: error: [NullAway] initializer method does not guarantee @NonNull field speedController (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SpeedControllerGui() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/GenericLittleManGui.java:59: error: [NullAway] dereferenced expression notebookDeveloper is @Nullable
                GenericLittleManGui.this.notebookEditorPanel.setProblemDescription(notebookDeveloper.getCurrentProblemDescription());
                                                                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:103: error: [NullAway] @NonNull static field instructionDescriptions not initialized
    private static EnumMap<InstructionFromSet, String> instructionDescriptions;
                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url78117c6033_BrianMoths_LittleManManager_tgz-pJ8-littlemangame_LittleManGameJ8/src/littlemangame/instructions/InstructionFromSet.java:104: error: [NullAway] @NonNull static field instructionDetails not initialized
    private static EnumMap<InstructionFromSet, String> instructionDetails;
                                                       ^
    (see http://t.uber.com/nullaway )
11 errors
